post model is modify

--- a/templates/categories.html
+++ b/templates/categories.html
@@ -30,13 +30,13 @@
             <a href="{% url 'posts' %}">Posts</a>
           </li>
           <li class="active">
-            <a href="categories.html">Categories</a>
+            <a href="{% url 'categories' %}">Categories</a>
           </li>
           <li>
-            <a href="comments.html">Comments</a>
+            <a href="{% url 'comments' %}">Comments</a>
           </li>
           <li>
-            <a href="users.html">Users</a>
+            <a href="{% url 'register' %}">Users</a>
           </li>
         </ul>
         <!-- Side nav -->
