--- a/templates/posts.html
+++ b/templates/posts.html
@@ -102,10 +102,10 @@
         <div class="input-field">
           <select name="category">
             <option value="" disabled selected>Select option</option>
-            <option value="1">Web Development</option>
-            <option value="2">Graphic Design</option>
-            <option value="3">Tech Gadgets</option>
-            <option value="4">Other</option>
+            <option value="Web Development">Web Development</option>
+            <option value="Graphic Design">Graphic Design</option>
+            <option value="Tech Gadgets">Tech Gadgets</option>
+            <option value="Other">Other</option>
           </select>
           <label>Category</label>
         </div>
