--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Custom Materialize Theme</title>
+    <title>Login</title>
   </head>
 
   <body class="grey lighten-4">
