--- a/templates/login.html
+++ b/templates/login.html
@@ -82,10 +82,7 @@
     </div>
 
     <!--Import jQuery before materialize.js-->
-    <script
-      type="text/javascript"
-      src="https://code.jquery.com/jquery-3.2.1.min.js"
-    ></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script
       type="text/javascript"
       src="{% static 'js/materialize.min.js' %}"
@@ -97,7 +94,7 @@
       $(".section").hide();
 
       // Ajax
-      $(document).on("submit", "#loginForm", function(e){
+      $("#loginForm").submit(function(e){
         e.preventDefault();
         $.ajax({
           url:"{% url 'login' %}",
@@ -106,11 +103,11 @@
           data:{
               email: $("#email").val(),
               password: $("#password").val(),
-              csrfmiddlewaretoken: "{% csrf_token %}",
+              csrfmiddlewaretoken: "{{csrf_token}}",
           },
 
           success:function(response){
-            alert('Successfully login');
+            window.location.href = "{% url 'home' %}"
           }
           
          
