--- a/templates/comments.html
+++ b/templates/comments.html
@@ -166,7 +166,7 @@
   </div>
 
   <!--Import jQuery before materialize.js-->
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="{% static 'js/materialize.min.js' %}"></script>
 
   <script>
